# cloyster

./: .gitignore  Cargo.toml  README.md  install-dependencies.sh  test.c  test.sh
.github/workflows/: build.yml  test.yml
c_test_cases/: args.c  atoi.c  errno_single_thread.c  file_read.c  fizzbuzz.c  malloc.c  math.c  printf.c  sprintf.c  string.c  time.c  tls_single_thread.c  tolower_toupper.c
cloyster/: Cargo.toml
cloyster/src/: allocator.rs  assert.rs  crt0.rs  errno.rs  globals.rs  init.rs  lib.rs  logging.rs  string.rs  tls.rs  types.rs
cloyster/src/crt0/: mod.rs  riscv64.S  x86_64.S
cloyster/src/exports/: exit.rs  malloc.rs  math.rs  mod.rs  stdio.rs  stdlib.rs  string.rs  unistd.rs
cloyster/src/malloc/: alloc_impl.rs  mod.rs
cloyster/src/stdio/: file.rs  mod.rs  printf.rs
cloyster/src/stdlib/: mod.rs
cloyster/src/unistd/: exports.rs  linux.rs  mod.rs  types.rs
include/: __cloyster_compat.h  assert.h  errno.h  stdio.h  stdlib.h  string.h  time.h
shellder/: Cargo.toml
shellder/src/: errno.rs  exit.rs  lib.rs  math.rs  string.rs
shellder/src/malloc/: alloc_impl.rs  free_list_impl.rs  global_alloc_impl.rs  mod.rs
shellder/src/stdio/: file.rs  mod.rs  printf.rs
shellder/src/stdlib/: conversions.rs  exit.rs  mod.rs
shellder/src/string/: ctype.rs  mem.rs  mod.rs
shellder/src/unistd/: linux.rs  mod.rs  types.rs
src/: assert.rs  crt0.rs  errno.rs  lib.rs  linux.rs  printf.rs  stdio.rs  string.rs  types.rs
src/malloc/: alloc_impl.rs  mod.rs  usize_ext.rs
src/stdio/: mod.rs  printf.rs
src/stdlib/: mod.rs
src/unistd/: linux.rs  mod.rs  types.rs
