[package]
name = "cloyster"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[lints.rust]
# Don't allow implicit unsafe operations in `unsafe fn`, so we don't do
# something unsafe without being aware of it. I'm told this will be a hard
# error in a future version of Rust
unsafe_op_in_unsafe_fn = "deny"

[dependencies]
log = "0.4.21"
shellder = { version = "0.0.0", path = "../shellder" }
spin = { version = "0.9.8", default-features = false, features = ["spin_mutex"] }
