[package]
name = "cloyster"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[lints.rust]
# Don't allow implicit unsafe operations in `unsafe fn`, so we don't do
# something unsafe without being aware of it. I'm told this will be a hard
# error in a future version of Rust
unsafe_op_in_unsafe_fn = "deny"

[features]
default = ["provide_alloc"]
# Provide a GlobalAllocator implementation
provide_alloc = []

[dependencies]
log = "0.4.22"
shellder = { path = "../shellder" }
spin = { version = "0.9.8", default-features = false, features = ["spin_mutex"] }
